fix (onboard): CSS fix to handle overflow during on-boarding process.

--- a/src/views/on-board/DataUploader.module.scss
+++ b/src/views/on-board/DataUploader.module.scss
@@ -20,6 +20,7 @@
 @use '@carbon/colors' as *;
 
 .root {
+  margin-top: $spacing-05;
   height: 100%;
   width: 100%;
   display: flex;
