--- a/src/views/on-board/Onboard.module.scss
+++ b/src/views/on-board/Onboard.module.scss
@@ -34,8 +34,6 @@
 
 .progressTracker {
   margin-top: $spacing-05;
-  margin-left: $spacing-03;
-  height: $spacing-12;
 }
 
 .reconfigureBanner {
